20100719
	appl/cmd/disk/mkfs.b change getname/getpath to cope with missing newline [issue 236]
20100715
	appl/wm/toolbar.b changed not to create new /chan/snarf if one exists, unless -p (private) option given [toolbar(1)]
	utils/cc/macbody - add overlooked change to implement __VA_ARGS__
	other minor updates to the compilers to resync
20100714
	correctly initialise types in utils/cc/sub.c
20100504
	change lib9/strtoull.c for MS
20100503
	updated libmach/8db.c to avoid [] initialisers
20100501
	update libmach to compensate for MS compiler
20100426
	updated libmach
	updated compiler suites (continuing)
20100425
	appl/wm/wm.b shorten processing of wmctl close if client hadn't started
20100406
	fix handling of boundary case in libtk/utils.c
20100402
	add new option OPTflags to libtk for later use
20100325
	more swizzling of libtk for later use. revised radio and check buttons.
20100322
	a few tweaks to Tk for later use
20100320
	appl/lib/json.b dis/lib/json.dis - use %f not string <real-value> to ensure json value acceptable [issue 230, powerman]
20100310
	stop tabs(2) from issuing pointless tk cmd that produces diagnostics
20100305
	add emu/Linux/audio-oss.c from saoret.one [issue 226]
20100226
	mention -n nvram option in keyfs(4)
20100220
	appl/cmd/keyfs.b wasn't clunking fids on error in remove [issue 225]
20100213
	apply saoret.one's changes for thumb [issue 155]
20100205
	update man pages to replace most references to Styx by 9P
	update man pages to replace references to sys-dial(2) by dial(2)
	add DragonFly files (from fgudin and extrudedaluminiu, issue 181); possibly should automatically keep aligned with FreeBSD
	fpe handling in OpenBSD and FreeBSD [mechiel, issue 190]
	appl/cmd/vacfs.b apply fix from mechiel [issue 204]
20100203
	appl/lib/cfg.b treat \r as white space [issue 69, issue 70]
	add u64int to lib9.h files that needed it
	add sha2.c sha256block.c sha512block.c to libsec/port and include/libsec.h [issue 185, mechiel]